# dify-plugin-pdm-template

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt
.github/workflows/: plugin-publish.yml
